Fixed #247; Underline does not work. Updated wysihtml5 to 0.4.0pre

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -21,7 +21,8 @@
 		<!-- Load JavaScript -->
         <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
 		<script src="http://www.google.com/jsapi?key=ABQIAAAATqrYeRgzMa92HeAJ337iJhRWlTAuTwYT79cviOHriikXgTyaXRSApoqdJPf4dwJKYRnFn_s4iABNkg" type="text/javascript"></script>
-		<script src="{{ STATIC_URL }}/js/wysihtml5-0.3.0_rc2.js"></script>
+        <script src="{{ STATIC_URL }}/js/advanced.js"></script>
+		<script src="{{ STATIC_URL }}/js/wysihtml5-0.4.0pre.min.js"></script>
 		<script type="text/javascript">
 			google.load("jquery", "1.7.1", {uncompressed:false});
 			google.load("jqueryui", "1.8.16", {uncompressed:false});
