--- a/src/apps/ecidadania/voting/templates/voting/voting_detail.html
+++ b/src/apps/ecidadania/voting/templates/voting/voting_detail.html
@@ -22,6 +22,7 @@
         <img src="{{ STATIC_URL }}/assets/banners/index.png" />
     {% endif %}
 {% endblock %}
+
 {% block space %}
     {% if get_place %}
         <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
@@ -29,50 +30,48 @@
         <a class="brand" href="{% url 'site-index' %}">e-cidadania</a>
     {% endif %}
 {% endblock %}
-{% block content %}
-<h1>{{ voting.title }}</h1>
-<br />
-<h5>{% trans "Description:" %}  {{ voting.description }}</h5>
-<h5>{% trans "Created by:" %}  {{ voting.author }}</h5>
-<h5>{% trans "Start date:" %}  {{ voting.start_date }}</h5>
-<h5>{% trans "End date:" %}  {{ voting.end_date }}</h5>
-<br /><br />
-<h5>{% trans "Vote on the following:" %}</h5>
-<div><h5>{% trans "Proposalsets:" %}</h5>
-<br />
-{% for proposalset in proposalsets %}
-<div style=" width: 300px; float: left;"><a href="{{ proposalset.get_absolute_url }}">{{ proposalset }}</a>
-{% if proposalset.debate %}
-<br /><b>{% trans "Linked to debate:" %}</b> <a href="{{ proposalset.debate.get_absolute_url }}">{{ proposalset.debate }}</a>
-{% endif %}
-<br />
-{% trans "Proposals in this proposalset:" %}
-<br />
-{% for all in all_proposals %}
-{% if all.proposalset.pk == proposalset.pk %}
-<a href="{{ all.get_absolute_url }}">{{ all }}</a>
-<br/><b>{% trans "Description:" %}</b> {{ all.description|truncatewords:40 }}
-<br /><b>{% trans "Current votes status:" %}</b> {{ all.support_votes.count }}
-<br />
-<br />
-{% endif %}
-{% endfor %}
-</div>
-<br />
-<br />
-{% endfor %}
-<br />
-</div>
-<div style=" width: 300px; float: left;">
-<h5>{% trans "Unlinked proposals:" %}</h5>
-<br />
-{% for proposal in proposals %}
-<a href="{{ proposal.get_absolute_url }}">{{ proposal }}</a>
-<br/><b>{% trans "Description:" %}</b> {{ proposal.description|truncatewords:40 }}
-<br /><b>{% trans "Current votes status:" %}</b> {{ proposal.support_votes.count }}
-<br />
-<br />
 
-{% endfor %}
-</div>
+{% block content %}
+    <h2>{{ voting.title }}</h2>
+    <div class="row">
+        <div class="span3">
+            <ul class="unstyled">
+                <li><strong>{% trans "Description:" %}</strong> {{ voting.description }}</li>
+                <li><strong>{% trans "Created by:" %}</strong> {{ voting.author }}</li>
+                <li><strong>{% trans "Start date:" %}</strong> {{ voting.start_date }}</li>
+                <li><strong>{% trans "End date:" %}</strong> {{ voting.end_date }}</li>
+                <hr>
+                <li><strong>{% trans "Vote on the following:" %}</strong></li>
+                <li><strong>{% trans "Proposal sets" %}</strong></li>
+                {% for pset in proposalsets %}
+                    <li><a href="{{ pset.debate.get_absolute_url }}">{{ pset }}</a></li>
+                    {% if pset.debate %}
+                        <li><strong>{% trans "This proposal set is linked to:" %}</strong> <a href="{{ pset.debate.get_absolute_url }}">{{ pset.debate }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
+
+        <div class="span9">
+            {% for all in all_proposals %}
+                {% if all.proposalset.pk == proposalset.pk %}
+                    <a href="{{ all.get_absolute_url }}">{{ all }}</a>
+                    <br/><b>{% trans "Description:" %}</b> {{ all.description|truncatewords:40 }}
+                    <br /><b>{% trans "Current votes status:" %}</b> {{ all.support_votes.count }}
+                    <br />
+                    <br />
+                {% endif %}
+            {% endfor %}
+
+            <h6>{% trans "Unlinked proposals:" %}</h6>
+            <br />
+            {% for proposal in proposals %}
+                <a href="{{ proposal.get_absolute_url }}">{{ proposal }}</a>
+                <br/><b>{% trans "Description:" %}</b> {{ proposal.description|truncatewords:40 }}
+                <br /><b>{% trans "Current votes status:" %}</b> {{ proposal.support_votes.count }}
+                <br />
+                <br />
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
