Enhance Test suite by giving better console output (& showing this by default). Make it possible to add further console output easily & remove a level of indirection by removing core_widgets. Fix languages menu in RTL (thanks Jorge). Fix crash in change_password

--- a/static/themes/default/menu.css
+++ b/static/themes/default/menu.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+/* This section isn't translated so should always appear LTR (except potentially within individual languages) */
+#languages {
+    direction: ltr;
+}
+
 /* Main Navigation (S3MainMenu or modules menu) */
 #menu_modules {
     position: absolute;
