Added maps to proposal templates

--- a/src/apps/ecidadania/proposals/templates/proposals/proposal_detail.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposal_detail.html
@@ -50,6 +50,12 @@
 
 {% block content %}
 
+<style type="text/css">
+        #map img { 
+            max-width: none;  
+        }
+</style>
+
     <div class="row">
         <div class="span12">
             <div class="row proposal-wrapper">
@@ -61,9 +67,9 @@
                     <div class="proposal-title">{{ proposal.title }}</div>
                     <div class="proposal-message">{{ proposal.description|safe }}</div>
                     <div class="proposal-creator">{% trans "proposed by " %} {{ proposal.author }} {% trans " at " %} {{ proposal.pub_date }}</div>
-                    {% if location.latitude and location.longitude %}
-                        <button class="btn btn-small showmap">{% trans "Show/hide map" %}</button>
-                        <div id="proposalmap" class="map"></div>
+                    {% if proposal.latitude and proposal.longitude %}
+                        <a id="showmap" class="btn btn-default" style="margin-bottom:15px;">{% trans "Show map" %}</a>
+                        <div id="map" style="width:700px;height:400px;border:1px solid #AAA;" class="hidden"></div>
                         {% endif %}                      
                     {% if merged_proposal %}
                     <h3>Merged Proposal</h3>
@@ -84,20 +90,7 @@
         </div>
     </div>
 
-    <script type="text/javascript">
-        map = new OpenLayers.Map("proposalmap");
-        var mapnik         = new OpenLayers.Layer.OSM();
-        var fromProjection = new OpenLayers.Projection("EPSG:4326");
-        var toProjection   = new OpenLayers.Projection("EPSG:900913"); 
-        //var toProjection   = new OpenLayers.Projection("EPSG:900913"); 
-        var position       = new OpenLayers.LonLat({{ proposal.longitude }}, {{ proposal.latitude }}).transform( fromProjection, toProjection);
-        var zoom           = 17;
-        map.addLayer(mapnik);
-        map.setCenter(position, zoom);
-        $('#proposalmap').hide();
-        $('button.showmap').click(function() {
-            $('#proposalmap').toggle('fast');
-        })
-    </script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/proposal_tools.js"></script>
+    <script type="text/javascript">viewMap( {{ location.latitude }}, {{ location.longitude }} )</script>
 
 {% endblock %}
