Changed contact address

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -103,7 +103,7 @@
 	            (c) 2011-{% now "Y" %} <a href="http://ecidadania.org">e-cidadania</a> |
                 <a href="http://docs.ecidadania.org">Help</a> |
                 <a href="http://code.ecidadania.org">Developers</a> |
-                <a href="mailto:&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#101;&#099;&#105;&#100;&#097;&#100;&#097;&#110;&#105;&#097;&#046;&#111;&#114;&#103;">Contact</a> |
+                <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#105;&#110;&#102;&#111;&#64;&#101;&#99;&#105;&#100;&#97;&#100;&#97;&#110;&#105;&#97;&#46;&#111;&#114;&#103;">Contact</a> |
                 Terms of use
                 <div style="float:right;margin-bottom:-5px;">
                     <a href="http://twitter.com/ecidadaniafloss"><i style="font-size: 24px;" class="icon-twitter"></i> </a>
