--- a/src/apps/ecidadania/proposals/templates/proposals/proposal_form_in_set.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposal_form_in_set.html
@@ -31,6 +31,12 @@ automatically if found in the data models.
 
 {% block content %}
 
+<style type="text/css">
+        #map img { 
+            max-width: none;  
+        }
+</style>
+
 <div class="row">
     <div class="span12">
         {% if form.title.value %}
@@ -101,7 +107,7 @@ automatically if found in the data models.
             </div>
             {% endif %}
             {% if "latitude" in form_field %}
-            <div class="control-group {% if form.latitude.errors %}error{% endif %}">
+            <div class="control-group {% if form.latitude.errors %}error{% endif %} hidden">
                 <label class="control-label">{{ form.latitude.label }}</label>
                 <div class="controls">
                     <div class="input-append">
@@ -119,7 +125,7 @@ automatically if found in the data models.
             </div>
             {% endif %}
             {% if "longitude" in form_field %}
-            <div class="control-group {% if form.longitude.errors %}error{% endif %}">
+            <div class="control-group {% if form.longitude.errors %}error{% endif %} hidden">
                 <label class="control-label">{{ form.longitude.label }}</label>
                 <div class="controls">
                     <div class="input-append">
@@ -135,6 +141,13 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
+            {% trans "If you want to add location information please click 'Show map'" %}
+            <a id="showmap" class="btn btn-default" style="margin-bottom:15px;">{% trans "Show map" %}</a>
+            <div id="map" style="width:900px;height:500px;border:1px solid #AAA;" class="hidden"></div>
+
+            <script type="text/javascript" src="http://openlayers.org/api/OpenLayers.js"></script>
+            <script type="text/javascript" src="{{ STATIC_URL }}js/proposal_tools.js"></script>
+            <script type="text/javascript">clickMap();startMap();toggleMap();</script>
             {% endif %}
             <hr />
             <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
