Added ViewPoll. Fixed problems with wrong links.

--- a/src/core/spaces/templates/spaces/space_index.html
+++ b/src/core/spaces/templates/spaces/space_index.html
@@ -262,7 +262,7 @@
                             <ul class="unstyled">
                                 <h4>{% trans "Actions" %}</h4>
                                 <li><a href="{% url 'list-polls' get_place.url %}">{% trans "List polls" %}</a></li>
-                                <li><a href="{% url 'list-polls' get_place.url %}">{% trans "List voting" %}</a></li>
+                                <li><a href="{% url 'list-votings' get_place.url %}">{% trans "List voting" %}</a></li>
                             </ul>
                         </div>
                     </div>
