Solved minor issues in poll functions and space index template

--- a/src/apps/ecidadania/voting/templates/voting/poll_detail.html
+++ b/src/apps/ecidadania/voting/templates/voting/poll_detail.html
@@ -39,13 +39,15 @@
 
             {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
                 <div class="poll_detail">
-                    <form action="{{ get_place.get_absolute_url }}vote/" method="post">
+                    <form action="{% url 'vote-poll' get_place.url poll.id %}" method="post">
                         {% csrf_token %}
                         {% for choice in poll.choice_set.all %}
                             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
                             <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
                         {% endfor %}
-                        <input class="btn btn-small btn-primary" type="submit" value="{% trans "Vote" %}" />
+                        <hr />
+                        <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
+                        <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Vote' %}" />
                     </form>
                 </div>
         </div>
