--- a/src/apps/ecidadania/voting/templates/voting/poll_results.html
+++ b/src/apps/ecidadania/voting/templates/voting/poll_results.html
@@ -38,5 +38,5 @@
         {% endfor %}
     </ul>
 
-    <a href="{% url 'list-polls' get_place.url %}">Vote again?</a>
+    <a class="btn btn-default" href="{% url 'list-polls' get_place.url %}">Vote again?</a>
 {% endblock %}
