--- a/src/core/spaces/templates/spaces/space_index.html
+++ b/src/core/spaces/templates/spaces/space_index.html
@@ -202,7 +202,7 @@
                             <h4>{% trans "Polls" %}</h4>
                             <ul class="unstyled">
                                 {% for poll in polls %}
-                                    <li><a href="{% url 'view-poll' get_place.url poll.id %}">{{ poll.question }}</a></li>
+                                    <li><a href="{% url 'view-poll' get_place.url poll.id %}">{{ poll.question }}</a>
                                         {% if user_is_admin %}
                                             {% if perms.voting.change_poll %}
                                                 <a href="{% url 'edit-poll' get_place.url poll.id %}" title="{% trans 'Edit' %}">
@@ -215,6 +215,7 @@
                                                 </a>
                                             {% endif %}
                                         {% endif %}
+                                    </li>
                                 {% empty %}
                                     <li>{% trans "There are no polls at this moment." %}</li>
                                 {% endfor %}
