Several changes in the data models, tempaltes and functions. Revamped the voting function to make double check.

--- a/src/apps/ecidadania/voting/templates/voting/poll_results.html
+++ b/src/apps/ecidadania/voting/templates/voting/poll_results.html
@@ -3,9 +3,8 @@
 {% load wysiwyg %}
 
 {% block title %}
-{% trans "Results" %}{{ poll.question }}
+    {% trans "Results" %}{{ poll.question }}
 {% endblock %}
-
 
 {% block logo %}
     {% if get_place %}
@@ -22,6 +21,7 @@
         <img src="{{ STATIC_URL }}/assets/banners/index.png" />
     {% endif %}
 {% endblock %}
+
 {% block space %}
     {% if get_place %}
         <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
@@ -29,12 +29,13 @@
         <a class="brand" href="{% url 'site-index' %}">e-cidadania</a>
     {% endif %}
 {% endblock %}
-{% block content %}
-<h1>{{ poll.question }}</h1>
 
-<ul>
-    {% for choice in poll.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} {% trans "vote" %}{{ choice.votes|pluralize }}</li>
+{% block content %}
+    <h1>{{ poll.question }}</h1>
+
+    <ul>
+        {% for choice in poll.choice_set.all %}
+            <li>{{ choice.choice_text }} -- {{ votes_count }} {% trans "vote" %}{{ choice.votes|pluralize }}</li>
         {% endfor %}
     </ul>
 
