Fixed list URL error and some minor template errors related with translation and reverse URLs

--- a/src/apps/ecidadania/proposals/templates/proposals/proposal_detail.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposal_detail.html
@@ -72,7 +72,7 @@
                         <div id="map" style="width:700px;height:400px;border:1px solid #AAA;" class="hidden"></div>
                         {% endif %}                      
                     {% if merged_proposal %}
-                    <h3>Merged Proposal</h3>
+                    <h3>{% trans "Merged Proposal" %}</h3>
                     <div class="proposal-title">
                         <ul>
                             {% for merged in merged_proposal %}
