--- a/src/apps/ecidadania/proposals/templates/proposals/proposal_form.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposal_form.html
@@ -139,7 +139,7 @@ automatically if found in the data models.
                 </div>
             </div>
 
-            {% trans "If you want to add location information please click "Show map" %}:
+            {% trans "If you want to add location information please click 'Show map'" %}:
             <a id="showmap" class="btn btn-default" style="margin-bottom:15px;">{% trans "Show map" %}</a>
             <div id="map" style="width:900px;height:500px;border:1px solid #AAA;" class="hidden"></div>
 
