Redirect user that already voted to the results. Remove "empty space" strings from templates. Added results link in the poll listing.

--- a/src/apps/ecidadania/voting/templates/voting/poll_results.html
+++ b/src/apps/ecidadania/voting/templates/voting/poll_results.html
@@ -39,5 +39,6 @@
         {% endfor %}
     </ul>
 
-    <a class="btn btn-default" href="{% url 'list-polls' get_place.url %}">Vote again?</a>
+    <hr />
+    <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
 {% endblock %}
